<resources>
    <string name="app_name">SmartServer</string>
    <string name="settings">Settings</string>
    <string name="sens_detail">Details</string>
    <string name="sens_pager">Sensor</string>
    <string name="add_sensor">Add sensor</string>
    <string name="edit_sensor">Edit sensor</string>
    <string name="delete_sensor">Delete sensor</string>
    <string name="sim_tcp_start">Start TCP simulation</string>
    <string name="sim_tcp_stop">Stop TCP simulation</string>
    <string name="sim_udp_start">Start UDP simulation</string>
    <string name="sim_udp_stop">Stop UDP simulation</string>
    <string name="tcp_restart">Restart TCP/UDP Server</string>
    <string name="wifi_ip">WiFi IP:</string>
    <string name="sensor_id">ID:</string>
    <string name="sensor_loc">Location:</string>
    <string name="sensor_del_msg">"Do you want to delete sensor?"</string>
    <string name="sunrise">Восход:</string>
    <string name="sunset">Закат:</string>
    <string name="sensor_cnt">Сенсоров:</string>
    <string name="log_cnt">Логов:</string>
    <string name="sensor_hist_cnt">Историй:</string>
    <string name="temp">Темп</string>
    <string name="vcc">Vcc</string>
    <string name="humidity">Влажность</string>
    <string name="dhumidity">Протечка</string>
    <string name="intrv_day">День</string>
    <string name="intrv_week">Неделя</string>
    <string name="intrv_month">Месяц</string>
</resources>
