<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_add"
        android:orderInCategory="101"
        android:title="@string/add_sensor"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_tcp_sim_start"
        android:orderInCategory="102"
        android:title="@string/sim_tcp_start"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_tcp_sim_stop"
        android:orderInCategory="103"
        android:title="@string/sim_tcp_stop"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_udp_sim_start"
        android:orderInCategory="104"
        android:title="@string/sim_udp_start"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_udp_sim_stop"
        android:orderInCategory="105"
        android:title="@string/sim_udp_stop"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_tcp_restart"
        android:orderInCategory="106"
        android:title="@string/tcp_restart"
        app:showAsAction="never"/>
</menu>
