<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:padding="@dimen/spacing_medium"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_ip"
            android:layout_marginLeft="@dimen/spacing_xlarge"
            android:layout_marginRight="@dimen/spacing_xlarge"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/holo_green_light" />

        <TextView
            android:id="@+id/wifi_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity = "right"
            android:layout_marginLeft="@dimen/spacing_xlarge"
            android:layout_marginRight="@dimen/spacing_xlarge"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/holo_green_light" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_xlarge"
            android:layout_marginRight="@dimen/spacing_xlarge"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor = "@android:color/holo_green_light"
            android:text="@string/sensor_cnt"/>
        <TextView
            android:id="@+id/sensor_cnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity = "right"
            android:layout_marginLeft="@dimen/spacing_xlarge"
            android:layout_marginRight="@dimen/spacing_xlarge"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor = "@android:color/holo_green_light"
            android:text=""/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_xlarge"
            android:layout_marginRight="@dimen/spacing_xlarge"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor = "@android:color/holo_green_light"
            android:text="@string/log_cnt"/>
        <TextView
            android:id="@+id/log_cnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity = "right"
            android:layout_marginLeft="@dimen/spacing_xlarge"
            android:layout_marginRight="@dimen/spacing_xlarge"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor = "@android:color/holo_green_light"
            android:text=""/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_xlarge"
            android:layout_marginRight="@dimen/spacing_xlarge"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor = "@android:color/holo_green_light"
            android:text="@string/sensor_hist_cnt"/>
        <TextView
            android:id="@+id/sensor_hist_cnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity = "right"
            android:layout_marginLeft="@dimen/spacing_xlarge"
            android:layout_marginRight="@dimen/spacing_xlarge"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor = "@android:color/holo_green_light"
            android:text=""/>
    </LinearLayout>


</LinearLayout>
